# double-circulars

./: .gitignore  README.md  pyproject.toml  pytest.ini
.trae/documents/: arquitectura-tecnica-reloj-analogico-python-react.md  diseno-paginas-reloj-analogico-desktop-first.md  prd-reloj-analogico-lista-circular-doble.md
src/analog_clock_app/: main.py  tk_app.py
src/analog_clock_app/config/: settings.py
src/analog_clock_app/domain/clock/: engine.py  models.py
src/analog_clock_app/domain/structures/: __init__.py  doubly_circular_list.py  doubly_linked_list.py  dynamic_array.py  queue.py  singly_linked_list.py  stack.py
src/analog_clock_app/domain/time/: factory.py  interfaces.py  realtime_source.py  simulated_source.py
src/analog_clock_app/persistence/: db.py  repositories.py  schema.py
src/analog_clock_app/presentation/: tk_renderer.py
src/analog_clock_app/services/: __init__.py  alarm_service.py  clock_service.py  facade.py  history_service.py  preset_service.py  settings_service.py  world_clock_service.py
src/analog_clock_app/ui/: app.py  presenter.py
src/analog_clock_app/ui/pages/: __init__.py  about_page.py  alarms_page.py  clock_page.py  settings_page.py  stopwatch_page.py  timer_page.py  world_clock_page.py
tests/: test_additional_structures.py  test_alarm_world.py  test_clock_engine.py  test_doubly_circular_list.py  test_history_service.py  test_patterns.py  test_persistence_presets.py  test_timezone.py
tests_pytest/: test_clock_engine_pytest.py  test_doubly_circular_list_pytest.py  test_persistence_pytest.py
(+4 files in other folders)
