[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analog-clock-app"
version = "0.1.0"
description = "Analog clock app (Python-only) using a doubly circular linked list"
requires-python = ">=3.10"
dependencies = [
  "nicegui>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.10"
mypy_path = ["src"]
packages = ["analog_clock_app"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


